# FitTEX

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
backend/: main.py
backend/src/config/: config.py
backend/src/constants/: constants.py
backend/src/services/: fashion_assistant.py
config/: settings.toml
data/: queries
devops/: Dockerfile  docker-compose.yml  ollama.Dockerfile
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/ImageUploader/: ImageUploader.tsx
frontend/src/components/ProductItem/: ProductItem.css  ProductItem.tsx
frontend/src/components/ProductList/: ProductList.css  ProductList.tsx
frontend/src/components/SearchBar/: SearchBar.css  SearchBar.tsx
frontend/src/config/: config.js
frontend/src/controllers/: productController.js  uploadController.js
frontend/src/middlewares/: errorHandler.js
frontend/src/routes/: index.js
frontend/src/services/: api.js  apiService.js  cloudinaryService.js  mockApi.ts  server.js
notebooks/: Llama3_(8B)_Ollama.ipynb:Zone.Identifier  finetune_llama_model.ipynb
scripts/: test.py
src/services/: fashion_assistant.py
