[project]
name = "fittex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dynaconf>=3.2.10",
    "fuzzywuzzy>=0.18.0",
    "loguru>=0.7.3",
    "requests>=2.32.3",
]

[tool.uv.workspace]
members = ["backend/env", "backend"]
